- started work on : add support for service accounts #35
- implemented: add search functionality to team drives #83
- started work on add search functionality to team drives #83
- change "never ran" to "starting shortly"
- finalized speed optimations for STRM creation
- updates to caching for STRM creation optimizations
- add a force run task to + in scheduler
- STRM creation optimization fix for catalog (and retainFolders = false)
- testing: STRM creation - files with '/' in the name cause error writing to disk #78
- STRM creation optimization fixes tested
- STRM creation optimization -- no isFolderIDInPath checks for root or teamdrive root
- STRM creation support specific folders on team drives
- fix break in STRM functionality caused by   add additional STRM parameter to maintain folder structure #73
- implement: add additional STRM parameter to maintain folder structure #73
v0.1.26 (2018-07-21)
- fix for shared folders change tracking -- STRM creation - shared folders do not work with change tracking #74
- added additional logging and exception handling to scheduler executer
- fix non-catalog "save to STRM"
- fix for STRM counting
- ensure preferred_quality has override=true in menu and STRM creation
- fix: STRM creation - Change tracking not working in this 1 case #69
- correction for folderid when "create scheduled job" -- using incorrectly as team drive id whereas it should default to root
- implement: STRM creation - tv shows & catalog - preserve show title #72
- fix: add fallback to original if there are no transcode links
- fix: original taking precedence over override #68
v0.1.25 (2018-06-12)
- add STRM creation parameter - skip partial files
- fix for STRM logging
- add pquality=3 = original
- fix: Windows - \ is being replaced by %5C in settings #62
- fixing: Failed to pull down .nfo and .srt #61
- reset running scheduled jobs on load
- fixing missing parameters on scheduled task